k8s/policy-test-pod-compliant.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubeguard-policy-test
  namespace: default
spec:
  containers:
    - name: nginx
      image: nginx:latest
      resources:
        limits:
          cpu: "500m"
          memory: "256Mi"
