k8s/required-resources-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: pod-must-have-resource-limits
spec:
  match:
    namespaces:
      - kubeguard-demo
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
